# clockwork

./: .gitignore  LICENSE  README.md  clocker.py  clocker_enhanced.py  clockwork.py  db_manager.py  pyproject.toml  requirements.txt  setup.py  test.py  time_log.csv  utils.py  visualization.ipynb  visualization.py
installation/: windows_install.bat
