[project]
name = "clockwork-cli"
version = "0.1.0"
description = "A simple CLI tool for tracking time spent on different activities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click~=8.1.7",
    "contourpy~=1.2.1",
    "cycler~=0.12.1",
    "fonttools~=4.53.1",
    "importlib_resources~=6.4.4",
    "kiwisolver~=1.4.5",
    "matplotlib~=3.9.2",
    "numpy~=2.0.1",
    "packaging~=24.1",
    "pandas~=2.2.2",
    "pillow~=10.4.0",
    "plotly~=5.23.0",
    "pyparsing~=3.1.4",
    "python-dateutil~=2.9.0",
    "pytz~=2024.1",
    "six~=1.16.0",
    "tabulate~=0.9.0",
    "tzdata~=2024.1",
    "zipp~=3.20.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
clockwork = "clockwork:clockwork"